# fpt-ai-residency

./: .gitignore  README.md  application_default_credentials.json  ensemble.ipynb  finetuning_data.csv  hello.py  inference.ipynb  inference_gpt.py  inference_gpt_poe.py  inference_gwen.py  inference_llama.py  inference_llama2.py  inference_qwen.py  preprocessing.ipynb  prompt_template.py  pyproject.toml  test.ipynb
notebooks/: ensemble.ipynb  kaggle-qwen-2-5-coder-14b-conversational.ipynb  preprocessing.ipynb
output/: loss_history.csv  submission-ensemble.csv  submission-ensemble_1.csv  submission-gpt-4o-mini-zero-shot.csv  submission-llama-8192.csv  submission-qwen-14b-300-samples.csv  submission-qwen-14b-4k.csv  submission-qwen-7B-finetune.csv  submission-qwen-7b.csv  submission-qwen-coder-32B.csv  submission.csv  submission_gpt_poe_2_eliminate.csv  submission_qwen_14b_zero_shot.csv  temp_choices_answer.csv  temp_choices_answer_llama_8192.csv  training_loss_instruct.csv
